# mydata

./: .ai-scripts  .gitignore  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  eslint.config.mjs  opencode.json  package-lock.json  package.json  tsconfig.base.json
.claude/: hooks  rules  settings.json  skills
.codex/: config.toml  prompts
.github/: copilot-instructions.md  instructions  labels.json  prompts  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  config.yml  slice.md
.github/workflows/: ci.yml
.opencode/: agents  plugins
apps/daemon/: Package.swift  README.md
apps/extension/: Package.swift  README.md
apps/extension/Bundle/: Info.plist  MydataExtension.entitlements
apps/ui/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/ui/src/: App.test.tsx  App.tsx
apps/ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui/src-tauri/src/: main.rs
docs/: architecture.md  build.md  github-project-management.md  privacy-promise.md
docs/issues/post-v0.1/: alerts.md  auto-update.md  blocking.md  browser-extension.md  cloud-sync.md  cross-filtering.md  linux-port.md  mobile-companion.md  payload-size-heuristics.md  weekly-digest.md  (+3 more)
docs/qa/: native-e2e.md  release-checklist.md
scripts/: seed-issues.sh  setup-labels.sh  sign.sh  signing.env.example
scripts/launchd/: io.mydata.daemon.plist
tests/: check-migrations-mirror.sh
tests/e2e/: native-smoke.mjs  native-smoke.test.mjs  soak.sh
tests/privacy-paranoia/: README.md  binaries.json  run.mjs  run.test.mjs
(+67 files in other folders)
