[package]
name = "mydata-app"
version = "0.0.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "mydata_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
